frame/support/test/tests/construct_runtime_ui/unsupported_pallet_attr.rs
use frame_support::construct_runtime;

construct_runtime! {
	pub enum Runtime where
		Block = Block,
		NodeBlock = Block,
		UncheckedExtrinsic = UncheckedExtrinsic
	{
		System: system::{Pallet},
		#[attr]
		Balance: balances::{Config, Call},
	}
}

fn main() {}
